compiler/w_session/tests/errors/labels-as-identifiers.w
fn main() {
    // let $label = 1;
    $label
}